[project]
name = "fast-api-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn>=0.45.0",
]
